GNOME Bugzilla – Bug 767747
Window-management related fixes
Last modified: 2016-06-19 07:29:52 UTC
See attached patches. The former should improve the experience for desktop environments that don't have support for app menus, and the second one is a consistency fix with other applications such as eog or gedit.
Created attachment 329915 [details] [review] window: don't use a thumbnail as window icon Modern desktop environments already have window previews e.g. in the Alt-Tab interface (or in the Activities overview, in case of gnome-shell). For desktop environments that don't support an app menu, this also has the effect of making the "application icon" used for the menu that appears in the top-left window corner be the thumbnail, which is confusing and unclear. Just remove the code that changes the window icon.
Created attachment 329916 [details] [review] application: parent the about dialog to the currently active window Instead of letting it go unparented, which is discouraged and inconsistent with other similar apps.
Comment on attachment 329915 [details] [review] window: don't use a thumbnail as window icon Yes, I agree, pushed!
Comment on attachment 329916 [details] [review] application: parent the about dialog to the currently active window Ok, pushed too, thank you.